--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,6 +12,10 @@
   </div>
 </section>
 
+<section id="about">
+  <app-about></app-about>
+</section>
+
 <section id="skills">
   <!-- <section id="skills" data-aos="fade-up-right" data-aos-duration="2000" data-aos-offset="500"></section> -->
   <!-- Your skills content goes here -->
