--- a/src/app/contact/contact.component.css
+++ b/src/app/contact/contact.component.css
@@ -32,9 +32,10 @@
   padding: 10px 20px;
   background-color: #3498db;
   color: #fff;
-  text-decoration: none;
+  /* text-decoration: none; */
   border-radius: 5px;
   transition: background-color 0.3s ease;
+  text-align: center;
 }
 
 .download-resume-button:hover {
@@ -45,3 +46,4 @@
   text-align: center;
   margin-top: 20px; /* Add spacing between the sections */
 }
+
