--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -15,12 +15,12 @@
     <img src="assets/avatar-1.jpeg" alt="Your Image" class="contact-image">
 
     <!-- Download Resume button -->
-    <a href="assets/Harshal's Resume.pdf" download class="download-resume-button">Download Resume</a>
+    <a href="assets/Harshal's Resume.pdf" class="download-resume-button" target="_blank">Explore Resume</a>
   </div>
 
 </section>
 
-<div class="creative-section" data-aos="fade-up" data-aos-duration="2000">
+<div class="creative-section">
   <h3>Let's Connect!</h3>
   <p>Feel free to reach out to discuss collaborations, projects, or just to say hello!</p>
 </div>
