--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 :root {
   --primary-color: #2c3e50;  /* Set your primary color */
-  --secondary-color: #2ecc71;  /* Set your secondary color */
+  --secondary-color: #bc6c25;  /* Set your secondary color */
   --background-color: #ecf0f1;  /* Set your background color */
   --text-color: #2c3e50;  /* Set your text color */
 }
