--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -1,7 +1,32 @@
 <!-- projects.component.html -->
+
+<!-- projects.component.html -->
+
 <section class="projects-container">
-  <h2 data-aos="fade-down-right" data-aos-duration="2000" data-aos-offset="500">Projects</h2>
-  <div class="project-list" data-aos="fade-down-left" data-aos-duration="1500" data-aos-offset="500">
+  <h2 data-aos="fade-up-right" data-aos-duration="1000">Projects</h2>
+
+  <div class="project-list" data-aos="fade-up-left" data-aos-duration="1000">
+    <mat-card *ngFor="let project of projects" class="project-card" data-aos="zoom-in" data-aos-duration="1000">
+      <mat-card-header>
+        <mat-card-title>{{ project.name }}</mat-card-title>
+        <mat-card-subtitle style="color: #87986a;">{{ project.techStack }}</mat-card-subtitle>
+      </mat-card-header>
+      <mat-card-content>
+        <p>{{ project.description }}</p>
+      </mat-card-content>
+      <mat-card-actions>
+        <a mat-button href="{{ project.url }}" target="_blank">View Project</a>
+      </mat-card-actions>
+    </mat-card>
+  </div>
+</section>
+
+
+
+<!-- projects.component.html -->
+<!-- <section class="projects-container">
+  <h2 data-aos="fade-down-right" data-aos-duration="1000">Projects</h2>
+  <div class="project-list" data-aos="fade-down-left" data-aos-duration="1000">
     <div class="project-card" *ngFor="let project of projects">
       <div class="project-info">
         <h3>{{ project.name }}</h3>
@@ -11,4 +36,4 @@
       </div>
     </div>
   </div>
-</section>
+</section> -->
