Finishing changes for first deployment

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -3,10 +3,10 @@
     <h2>About Me</h2>
     <p>
       I've completed my Bachelor's degree in Computer Engineering stream from the Universal College Of Engineering in 2019. I am a professional Software Developer with the knowledge of various different technologies.
-      As a developer, I enjoy bridging the gap between functionality and design. My goal is to always build applications that are scalable and efficient under the hood while providing engaging, pixel-perfect user experiences. In addition, I am highly responsive to client needs and also committed to helping people realize their vision.
+      As a developer, I enjoy bridging the gap between functionality and design. My goal is to always build applications that are scalable and efficient under the hood while providing engaging, pixel-perfect user experiences. In addition, I have expertise in all aspects of software development, from requirements gathering to deployment and also committed to helping people realize their vision.
     </p>
   </div>
   <mat-card class="about-card" data-aos="fade-right" data-aos-easing="ease-out-back" data-aos-duration="1000">
-    <img src="assets/avatar-1.jpeg" alt="Your Image" class="about-image">
+    <img src="assets/Avatar-header-new.jpeg" alt="Your Image" class="about-image">
   </mat-card>
 </div>
