--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,14 @@
 <!-- home.component.html -->
 <app-header></app-header>
 <div [ngClass]="{ 'dark-theme': themeService.darkTheme$ | async }">
-<section id="home">
+<section id="home" style="margin-top: -15px;">
   <!-- Your home content goes here -->
   <!-- <app-header></app-header> -->
   <div class="brief-description">
     <!-- <div class="brief-description" data-aos="fade-up"
     data-aos-anchor-placement="top-center" data-aos-duration="2500"> -->
     <h1 data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1000">Hello, I'm Harshal Sakhale</h1>
-    <p data-aos="fade-up" data-aos-easing="linear" data-aos-duration="1500">Welcome to my portfolio website. I am a passionate software engineer with 4+ years of experience in Java full stack development. Explore my projects and skills below!</p>
+    <p data-aos="fade-up" data-aos-easing="linear" data-aos-duration="1500">Welcome to my portfolio website. I am a passionate software engineer with 4+ years of experience in Java full stack development. Explore my projects and skillset below!</p>
   </div>
 </section>
 
