--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -15,7 +15,8 @@
         <p>{{ project.description }}</p>
       </mat-card-content>
       <mat-card-actions>
-        <a mat-button href="{{ project.url }}" target="_blank">View Project</a>
+        <!-- <a mat-button href="{{ project.url }}" target="_blank">View Project</a> -->
+        <a (click)="navigateToProject(project.url)" class="view-project-link">View Project</a>
       </mat-card-actions>
     </mat-card>
   </div>
